<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/detail_view_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/poster"
                android:minWidth="@dimen/poster_min_width"
                android:minHeight="@dimen/poster_min_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/poster_default" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical"
                android:paddingLeft="@dimen/detail_text_padding">

                <TextView
                    android:id="@+id/original_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original_title"
                    android:textSize="@dimen/detail_movie_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textSize="@dimen/detail_movie_rating" />

                <TextView
                    android:id="@+id/released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_data"
                    android:textSize="@dimen/detail_movie_released" />

                <CheckBox
                    android:id="@+id/fav_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/star" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text_padding"
                android:text="@string/trailers"
                android:textSize="@dimen/detail_movie_synopsis_title"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></ListView>

            <TextView
                android:id="@+id/empty_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_trailers"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text_padding"
                android:text="@string/synopsis"
                android:textSize="@dimen/detail_movie_synopsis_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text_padding"
                android:text="SynopsisData"
                android:textSize="@dimen/detail_movie_synopsis" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text_padding"
                android:text="@string/reviews"
                android:textSize="@dimen/detail_movie_synopsis_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text_padding"
                android:text="reviews"
                android:textSize="@dimen/detail_movie_synopsis" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
